Remove AudioWorkletThread::CollectAllGarbage()

nhiroki@ found that the method is never called and we decided to
remove the call. AudioWorkletThread is a ref-counted object, so
it does not need help of the blink garbage collector.

Bug: 892006
Change-Id: I5ed17101f94ee68765e471624f599eede491dd03
Reviewed-on: https://chromium-review.googlesource.com/c/1265995
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Commit-Queue: Hongchan Choi <hongchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598589}
Former-commit-id: 8c059b0f0d024c3a2cbeafa8a2e44416a4e6c46f