third_party/blink/renderer/modules/webaudio/audio_worklet_thread.h
@@ -28,9 +28,6 @@ class MODULES_EXPORT AudioWorkletThread final : public WorkerThread {
   // The backing thread is cleared by clearSharedBackingThread().
   void ClearWorkerBackingThread() override {}
 
-  // This may block the main thread.
-  static void CollectAllGarbage();
-
   static void EnsureSharedBackingThread();
   static void ClearSharedBackingThread();
 
